--- a/app/src/main/res/layout-land/activity_starting_page.xml
+++ b/app/src/main/res/layout-land/activity_starting_page.xml
@@ -6,28 +6,91 @@
     android:layout_height="match_parent"
     tools:context="StartingPage">
 
-
-    <Button
-        android:id="@+id/SinglePlayer"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:text="Single Player"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/MultiPlayer"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.623"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <Button
-        android:id="@+id/MultiPlayer"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginBottom="76dp"
-        android:text="MultiPlayer"
-        android:textSize="24dp"
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="368dp"
+        android:layout_height="255dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="355dp"
+        android:layout_height="335dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.31">
+
+        <Button
+            android:id="@+id/SinglePlayer"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="73dp"
+            android:text="Single Player"
+            android:textSize="24dp" />
+
+        <Button
+            android:id="@+id/MultiPlayer"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginTop="119dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="72dp"
+            android:text="MultiPlayer"
+            android:textSize="24dp" />
+
+        <Button
+            android:id="@+id/Tutorial"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="238dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="74dp"
+            android:text="Tutorial"
+            android:textSize="24dp">
+
+        </Button>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Powered By AOG"
+        android:textColor="@color/yellow"
+        android:textSize="15dp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.957" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
