--- a/app/src/main/res/layout-sw600dp/activity_starting_page.xml
+++ b/app/src/main/res/layout-sw600dp/activity_starting_page.xml
@@ -7,32 +7,87 @@
     tools:context="StartingPage">
 
 
-    <Button
-        android:id="@+id/SinglePlayer"
-        android:layout_width="847dp"
-        android:layout_height="356dp"
-        android:layout_marginBottom="88dp"
-        android:text="Single Player"
-        android:textSize="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/MultiPlayer"
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="578dp"
+        android:layout_height="496dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/MultiPlayer"
-        android:layout_width="847dp"
-        android:layout_height="356dp"
-        android:layout_marginBottom="256dp"
-        android:text="MultiPlayer"
-        android:textSize="36dp"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="663dp"
+        android:layout_height="509dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+        app:layout_constraintVertical_bias="0.298">
+
+        <Button
+            android:id="@+id/SinglePlayer"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="73dp"
+            android:text="Single Player"
+            android:textSize="24dp" />
+
+        <Button
+            android:id="@+id/MultiPlayer"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginTop="165dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="72dp"
+            android:text="MultiPlayer"
+            android:textSize="24dp" />
+
+        <Button
+            android:id="@+id/Tutorial"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="72dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="330dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="74dp"
+            android:text="Tutorial"
+            android:textSize="24dp">
+
+        </Button>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Powered By AOG"
+        android:textColor="@color/yellow"
+        android:textSize="15dp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.979" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
