--- a/app/src/main/res/layout/activity_single_player.xml
+++ b/app/src/main/res/layout/activity_single_player.xml
@@ -31,25 +31,25 @@
 
         <Button
             android:id="@+id/button_reset2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="99dp"
+            android:layout_height="65dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="3dp"
-            android:layout_marginEnd="124dp"
+            android:layout_marginEnd="113dp"
             android:layout_marginRight="33dp"
             android:text="reset" />
 
         <Button
             android:id="@+id/button_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="99dp"
+            android:layout_height="65dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="3dp"
-            android:layout_marginEnd="22dp"
+            android:layout_marginEnd="7dp"
             android:layout_marginRight="33dp"
             android:text="Back" />
 
