--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 1: 0"
-            android:textSize="30sp"
+            android:textSize="50sp"
             android:freezesText="true"/>
         <TextView
             android:id= "@+id/text_view_p2"
@@ -25,32 +25,37 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_p1"
             android:text="Player 2: 0"
-            android:textSize="30sp"
+            android:textSize="50sp"
             android:freezesText="true"/>
 
         <Button
             android:id="@+id/button_reset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="90dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="122dp"
-            android:layout_marginRight="33dp"
-            android:text="reset" />
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="274dp"
+            android:layout_marginRight="274dp"
+            android:text="reset"
+            android:textSize="35sp"
+            />
 
         <Button
             android:id="@+id/button_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="90dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="13dp"
             android:layout_marginEnd="19dp"
             android:layout_marginRight="33dp"
-            android:text="Back" />
+            android:text="Back"
+            android:layout_alignParentRight="true"
+            android:textSize="35sp"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
