Added A Tutorial Page

--- a/app/src/main/res/layout/activity_help_and_tutorial.xml
+++ b/app/src/main/res/layout/activity_help_and_tutorial.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".HelpAndTutorial">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/TitleTutorial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/TitleTutorialText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="60sp"
+            android:textStyle="italic"
+            android:textColor="@color/purple_500"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TitleTutorial"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/tv_tutorial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"/>
+    </RelativeLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
