--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="Player 1: 0"
             android:textSize="50sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:textColor="@color/white"/>
         <TextView
             android:id= "@+id/text_view_p2"
             android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
             android:layout_below="@id/text_view_p1"
             android:text="Player 2: 0"
             android:textSize="50sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button_reset"
@@ -41,7 +43,7 @@
             android:layout_marginRight="274dp"
             android:text="reset"
             android:textSize="35sp"
-            />
+            android:background="@drawable/rounded_button"/>
 
         <Button
             android:id="@+id/button_back"
@@ -55,7 +57,8 @@
             android:layout_marginRight="33dp"
             android:text="Back"
             android:layout_alignParentRight="true"
-            android:textSize="35sp"/>
+            android:textSize="35sp"
+            android:background="@drawable/rounded_button"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,7 +71,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_01"
@@ -76,7 +80,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_02"
@@ -84,7 +89,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -98,7 +104,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_11"
@@ -106,14 +113,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -127,7 +136,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_21"
@@ -135,14 +145,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button_22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
 
