--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="Player 1: 0"
             android:textSize="30sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:textColor="@color/white"/>
         <TextView
             android:id= "@+id/text_view_p2"
             android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
             android:layout_below="@id/text_view_p1"
             android:text="Player 2: 0"
             android:textSize="30sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button_reset"
@@ -38,7 +40,8 @@
             android:layout_marginTop="7dp"
             android:layout_marginEnd="122dp"
             android:layout_marginRight="33dp"
-            android:text="reset" />
+            android:text="reset"
+            android:background="@drawable/rounded_button"/>
 
         <Button
             android:id="@+id/button_back"
@@ -50,7 +53,8 @@
             android:layout_marginTop="7dp"
             android:layout_marginEnd="19dp"
             android:layout_marginRight="33dp"
-            android:text="Back" />
+            android:text="Back"
+            android:background="@drawable/rounded_button"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,7 +67,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_01"
@@ -71,7 +76,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_02"
@@ -79,7 +85,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -93,7 +100,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_11"
@@ -101,14 +109,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -122,7 +132,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button_21"
@@ -130,14 +141,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button_22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
 
