--- a/app/src/main/res/layout/activity_single_player.xml
+++ b/app/src/main/res/layout/activity_single_player.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:freezesText="true"
             android:text="Player: 0"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/text_view_computer"
@@ -27,7 +28,8 @@
             android:layout_below="@id/text_view_player"
             android:freezesText="true"
             android:text="Computer: 0"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button_reset2"
@@ -39,7 +41,8 @@
             android:layout_marginTop="3dp"
             android:layout_marginEnd="113dp"
             android:layout_marginRight="33dp"
-            android:text="reset" />
+            android:text="reset"
+            android:background="@drawable/rounded_button"/>
 
         <Button
             android:id="@+id/button_back"
@@ -51,7 +54,9 @@
             android:layout_marginTop="3dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="33dp"
-            android:text="Back" />
+            android:text="Back"
+            android:background="@drawable/rounded_button"/>
+
 
         <com.google.android.material.chip.ChipGroup
             android:layout_width="wrap_content"
@@ -70,7 +75,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button1_01"
@@ -78,7 +84,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button1_02"
@@ -86,7 +93,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -100,7 +108,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button1_11"
@@ -108,14 +117,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button1_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
     </LinearLayout>
     <LinearLayout
@@ -129,7 +140,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
 
         <Button
             android:id="@+id/button1_21"
@@ -137,16 +149,15 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
         <Button
             android:id="@+id/button1_22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="55sp"
-            android:freezesText="true"/>
-
+            android:freezesText="true"
+            android:backgroundTint="@color/black"/>
     </LinearLayout>
-
-
 </LinearLayout>
