--- a/app/src/main/res/layout/activity_starting_page.xml
+++ b/app/src/main/res/layout/activity_starting_page.xml
@@ -35,39 +35,44 @@
 
         <Button
             android:id="@+id/SinglePlayer"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_width="241dp"
+            android:layout_height="104dp"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="72dp"
             android:layout_marginLeft="72dp"
             android:layout_marginEnd="72dp"
             android:layout_marginRight="73dp"
+            android:background="@drawable/rounded_button"
             android:text="Single Player"
             android:textSize="24dp" />
 
         <Button
             android:id="@+id/MultiPlayer"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_width="241dp"
+            android:layout_height="104dp"
+            android:layout_below="@+id/SinglePlayer"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="72dp"
             android:layout_marginLeft="72dp"
-            android:layout_marginTop="119dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="72dp"
             android:layout_marginRight="72dp"
+            android:background="@drawable/rounded_button"
             android:text="MultiPlayer"
             android:textSize="24dp" />
 
         <Button
             android:id="@+id/Tutorial"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_width="241dp"
+            android:layout_height="104dp"
+            android:layout_below="@+id/MultiPlayer"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="72dp"
             android:layout_marginLeft="70dp"
-            android:layout_marginTop="238dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="72dp"
             android:layout_marginRight="74dp"
+            android:background="@drawable/rounded_button"
             android:text="Tutorial"
             android:textSize="24dp">
 
