--- a/app/src/main/res/layout-sw600dp/activity_starting_page.xml
+++ b/app/src/main/res/layout-sw600dp/activity_starting_page.xml
@@ -13,6 +13,7 @@
         android:layout_height="496dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
