--- a/app/src/main/res/layout/activity_starting_page.xml
+++ b/app/src/main/res/layout/activity_starting_page.xml
@@ -12,7 +12,9 @@
         android:layout_height="226dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
