--- a/app/src/main/res/drawable/gradient_night.xml
+++ b/app/src/main/res/drawable/gradient_night.xml
@@ -4,7 +4,7 @@
     xmlns:android = "http://schemas.android.com/apk/res/android" >
 
     <gradient
-        android:startColor = "#232323"
+        android:startColor = "#1E033A"
         android:endColor = "#650277"
         android:angle = "270"
         android:type = "linear"/>
