--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_p1"
-            android:text="Player 2: 0"
+            android:text="@string/player_2_0"
             android:textSize="50sp"
             android:freezesText="true"
             android:textColor="@color/white"/>
@@ -41,7 +40,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginEnd="274dp"
             android:layout_marginRight="274dp"
-            android:text="reset"
+            android:text="@string/reset"
             android:textSize="35sp"
             android:background="@drawable/rounded_button"/>
 
@@ -55,7 +54,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginEnd="19dp"
             android:layout_marginRight="33dp"
-            android:text="Back"
+            android:text="@string/back"
             android:layout_alignParentRight="true"
             android:textSize="35sp"
             android:background="@drawable/rounded_button"/>
