--- a/app/src/main/res/layout/activity_help_and_tutorial.xml
+++ b/app/src/main/res/layout/activity_help_and_tutorial.xml
@@ -58,8 +58,8 @@
             android:layout_marginEnd="72dp"
             android:layout_marginRight="73dp"
             android:background="@drawable/rounded_button"
-            android:text="Single Player"
-            android:textSize="24dp" />
+            android:text="@string/single_player"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/MultiPlayer_2"
@@ -73,8 +73,8 @@
             android:layout_marginEnd="72dp"
             android:layout_marginRight="72dp"
             android:background="@drawable/rounded_button"
-            android:text="MultiPlayer"
-            android:textSize="24dp" />
+            android:text="@string/multiplayer"
+            android:textSize="24sp" />
     </RelativeLayout>
 
 
